# soroban_melobyte

./: Cargo.toml  LICENSE  README.md
api/: onboard.py  origin.py
api/internal/: user
erc721/: Cargo.toml
erc721-example/src/: lib.rs
erc721/src/: lib.rs  tests.rs  types.rs
erc721/src/erc721traits/: burnable.rs
melobyte-contract/: Cargo.toml  Makefile  deploy.sh  init.sh
melobyte-contract/.soroban/identity/: admin.toml
melobyte-contract/src/: lib.rs  test.rs  types.rs
melobyte-creator/: App.tsx  index.css  index.tsx
melobyte-creator/abis/: AtomicMusicNFT.json  AtomicMusicYBNFT.json
melobyte-creator/components/CanvasSectionBox/: index.tsx
melobyte-creator/components/Dropzone/: index.tsx
melobyte-creator/components/MusicUploader/: index.tsx
melobyte-creator/components/TonePlayerViz/: index.tsx
melobyte-creator/components/TransactionDialog/: index.tsx
melobyte-creator/components/TransportBar/: index.tsx
melobyte-creator/components/WaveForm/: index.jsx
melobyte-creator/utils/: binaryTreeGenerator.ts
melobyte-frontend/: init.sh  package-lock.json  package.json
melobyte-frontend/src/components/: Connect.astro  Mint.astro  NFT.astro  Transfer.astro
melobyte-frontend/src/layouts/: Layout.astro
melobyte-frontend/src/pages/: collection.png.ts  index.astro  supply.ts
melobyte-frontend/src/pages/test/: [id].astro  [id].json.ts
melobyte-marketplace/: Cargo.toml
melobyte-marketplace/src/: lib.rs
