[package]
name = "erc721"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
name = "erc721"
path = "src/lib.rs"

[dependencies]
soroban-sdk = { workspace = true }
storage = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
default = ["enumerable", "metadata", "burnable"]
enumerable = []
metadata = []
burnable = []
